# REST-backend-virtual-capsules

./: Cargo.toml  README.md
src/: capsules.rs  contributors.rs  items.rs  main.rs  merges.rs
src/data/: capsule.json  contributors.json  items.json
templates/: capsule_detail.html.tera  index.html.tera
