[package]
name = "hello-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5", features = ["secrets", "json"] }
serde = { version = "1.0", features = ["derive"] }
once_cell = "=0.2.4"
chrono = { version = "0.4.38", features = ["serde"] }
rocket_sync_db_pools = "0.1.0"
serde_json = "1.0.115"
digest = "0.10.7"
sha2 = "0.10.8"



[dependencies.rocket_dyn_templates]
version = "0.1.0"
features = ["handlebars", "tera"]
